Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.
Admin message
The migration is almost done, at least the rest should happen in the background. There are still a few technical difference between the old cluster and the new ones, and they are summarized in this issue. Please pay attention to the TL:DR at the end of the comment.
Equivalent query: runconfig_tag IS IN ["xe"] AND machine_tag IS IN ["DG2", "LNL"] AND ((testsuite_name = "IGT" AND test_name IS IN ["igt@xe_evict@evict-large-multi-vm-cm", "igt@xe_evict@evict-beng-large-multi-vm-cm", "igt@xe_exec_threads@threads-mixed-fd-userptr-invalidate-race"])) AND ((testsuite_name = "IGT" AND status_name IS IN ["fail"])) AND stderr ~= 'Test assertion failure function __xe_vm_bind_assert.*\n.*Failed assertion: __xe_vm_bind\(fd, vm, exec_queue, bo, offset, addr, size, op, flags, sync, num_syncs, prefetch_region, \(\(uint8_t\)-1\), ext\) == 0'
Equivalent query: runconfig_tag IS IN ["xe"] AND machine_tag IS IN ["DG2", "LNL"] AND ((testsuite_name = "IGT" AND test_name IS IN ["igt@xe_evict@evict-large-multi-vm-cm", "igt@xe_evict@evict-beng-large-multi-vm-cm", "igt@xe_exec_threads@threads-cm-rebind", "igt@xe_exec_threads@threads-mixed-fd-userptr-invalidate-race"])) AND ((testsuite_name = "IGT" AND status_name IS IN ["fail"])) AND stderr ~= 'Test assertion failure function __xe_vm_bind_assert.*\n.*Failed assertion: __xe_vm_bind\(fd, vm, exec_queue, bo, offset, addr, size, op, flags, sync, num_syncs, prefetch_region, \(\(uint8_t\)-1\), ext\) == 0'
Equivalent query: runconfig_tag IS IN ["xe"] AND machine_tag IS IN ["PVC", "DG2", "LNL"] AND ((testsuite_name = "IGT" AND test_name IS IN ["igt@xe_evict@evict-large-multi-vm-cm", "igt@xe_evict@evict-beng-large-multi-vm-cm", "igt@xe_exec_threads@threads-cm-rebind", "igt@xe_exec_threads@threads-mixed-fd-userptr-invalidate-race"])) AND ((testsuite_name = "IGT" AND status_name IS IN ["fail"])) AND stderr ~= 'Test assertion failure function __xe_vm_bind_assert.*\n.*Failed assertion: __xe_vm_bind\(fd, vm, exec_queue, bo, offset, addr, size, op, flags, sync, num_syncs, prefetch_region, \(\(uint8_t\)-1\), ext\) == 0'
Equivalent query: runconfig_tag IS IN ["xe"] AND machine_tag IS IN ["PVC", "DG2", "LNL"] AND ((testsuite_name = "IGT" AND test_name IS IN ["igt@xe_evict@evict-large-multi-vm-cm", "igt@xe_exec_threads@threads-mixed-fd-userptr-invalidate-race", "igt@xe_evict@evict-beng-large-multi-vm-cm", "igt@xe_exec_threads@threads-cbal-shared-vm-rebind", "igt@xe_exec_threads@threads-cmixed-fd-userptr-invalidate-racebind"])) AND ((testsuite_name = "IGT" AND status_name IS IN ["fail"])) AND stderr ~= 'Test assertion failure function __xe_vm_bind_assert.*\n.*Failed assertion: __xe_vm_bind\(fd, vm, exec_queue, bo, offset, addr, size, op, flags, sync, num_syncs, prefetch_region, \(\(uint8_t\)-1\), ext\) == 0'
Equivalent query: runconfig_tag IS IN ["xe"] AND machine_tag IS IN ["PVC", "DG2", "LNL"] AND ((testsuite_name = "IGT" AND test_name IS IN ["igt@xe_evict@evict-large-multi-vm-cm", "igt@xe_exec_threads@threads-mixed-fd-userptr-invalidate-race", "igt@xe_evict@evict-beng-large-multi-vm-cm", "igt@xe_exec_threads@threads-shared-vm-userptr", "igt@xe_exec_threads@threads-bal-shared-vm-rebind", "igt@xe_exec_threads@threads-cm-rebind"])) AND ((testsuite_name = "IGT" AND status_name IS IN ["fail"])) AND stderr ~= 'Test assertion failure function __xe_vm_bind_assert.*\n.*Failed assertion: __xe_vm_bind\(fd, vm, exec_queue, bo, offset, addr, size, op, flags, sync, num_syncs, prefetch_region, \(\(uint8_t\)-1\), ext\) == 0'
Equivalent query: runconfig_tag IS IN ["xe"] AND machine_tag IS IN ["PVC", "DG2", "LNL"] AND ((testsuite_name = "IGT" AND test_name IS IN ["igt@xe_evict@evict-large-multi-vm-cm", "igt@xe_exec_threads@threads-mixed-userptr-invalidate-race", "igt@xe_exec_threads@threads-mixed-fd-userptr-invalidate-race", "igt@xe_evict@evict-beng-large-multi-vm-cm", "igt@xe_exec_threads@threads-shared-vm-userptr", "igt@xe_exec_threads@threads-bal-shared-vm-rebind", "igt@xe_exec_threads@threads-cm-rebind"])) AND ((testsuite_name = "IGT" AND status_name IS IN ["fail"])) AND stderr ~= 'Test assertion failure function __xe_vm_bind_assert.*\n.*Failed assertion: __xe_vm_bind\(fd, vm, exec_queue, bo, offset, addr, size, op, flags, sync, num_syncs, prefetch_region, \(\(uint8_t\)-1\), ext\) == 0'
Equivalent query: runconfig_tag IS IN ["xe"] AND machine_tag IS IN ["PVC", "DG2", "LNL"] AND ((testsuite_name = "IGT" AND test_name IS IN ["igt@xe_evict@evict-large-multi-vm-cm", "igt@xe_exec_threads@threads-bal-mixed-shared-vm-userptr-invalidate-race", "igt@xe_exec_threads@threads-mixed-userptr-invalidate", "igt@xe_exec_threads@threads-mixed-userptr-invalidate-race", "igt@xe_exec_threads@threads-mixed-fd-userptr-invalidate-race", "igt@xe_exec_threads@threads-bal-userptr-invalidate-race", "igt@xe_exec_threads@threads-hang-userptr-invalidate", "igt@xe_evict@evict-beng-large-multi-vm-cm", "igt@xe_exec_threads@threads-bal-shared-vm-rebind", "igt@xe_exec_threads@threads-bal-mixed-userptr-invalidate", "igt@xe_exec_threads@threads-shared-vm-userptr", "igt@xe_exec_threads@threads-bcm-fd-userptr-invalidate-race", "igt@xe_exec_threads@threads-shared-vm-rebind", "igt@xe_exec_threads@threads-rebind", "igt@xe_exec_threads@threads-cm-rebind"])) AND ((testsuite_name = "IGT" AND status_name IS IN ["fail"])) AND stderr ~= 'Test assertion failure function __xe_vm_bind_assert.*\n.*Failed assertion: __xe_vm_bind\(fd, vm, exec_queue, bo, offset, addr, size, op, flags, sync, num_syncs, prefetch_region, \(\(uint8_t\)-1\), ext\) == 0'